--- a/MyLibrary/src/ui_GG/JFMain_GG_Prop.form
+++ b/MyLibrary/src/ui_GG/JFMain_GG_Prop.form
@@ -393,11 +393,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JPasswordField" name="jPasswordField">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="******"/>
-              </Properties>
               <Events>
                 <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jPasswordFieldFocusGained"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jPasswordFieldActionPerformed"/>
                 <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jPasswordFieldKeyReleased"/>
               </Events>
             </Component>
