--- a/MyLibrary/src/ui/JFMain.form
+++ b/MyLibrary/src/ui/JFMain.form
@@ -49,7 +49,7 @@
         <Component class="javax.swing.JLabel" name="jLabelLogoLibrary">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/pictures/Library-logo.png"/>
+              <Image iconType="2" name="C:\Users\cdi308\Documents\NetBeansProjects\Librairie\MyLibrary\src\pictures\Library-logo.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Libray Logo"/>
           </Properties>
@@ -422,7 +422,7 @@
             <Component class="javax.swing.JLabel" name="jLabelTeamIcon">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/pictures/logo_poussin.png"/>
+                  <Image iconType="2" name="C:\Users\cdi308\Documents\NetBeansProjects\Librairie\MyLibrary\src\pictures\logo_poussin.png"/>
                 </Property>
               </Properties>
             </Component>
