--- a/MyLibrary/src/ui/JFCustomer.form
+++ b/MyLibrary/src/ui/JFCustomer.form
@@ -534,15 +534,10 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jTextField16" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jTextField15" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
-                                              <Component id="jTextField18" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                      </Group>
+                                      <Component id="jTextField15" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
+                                      <Component id="jTextField18" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="-2" pref="291" max="-2" attributes="0"/>
+                                  <EmptySpace min="291" max="32767" attributes="0"/>
                                   <Component id="jPanel7" min="-2" pref="105" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -1205,10 +1200,7 @@
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="1" attributes="0">
                                       <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
-                                      <Group type="102" alignment="1" attributes="0">
-                                          <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="jPanel12" min="-2" pref="105" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="jPanel12" alignment="1" min="-2" pref="105" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
