--- a/MyLibrary/src/FramePrincipaleChrystelle/PannelCentralSelection.form
+++ b/MyLibrary/src/FramePrincipaleChrystelle/PannelCentralSelection.form
@@ -664,6 +664,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseMoved" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jPanel19MouseMoved"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanel19MouseClicked"/>
               </Events>
 
               <Layout>
@@ -682,7 +683,7 @@
                 <Component class="javax.swing.JLabel" name="bAddEmployee">
                   <Properties>
                     <Property name="horizontalAlignment" type="int" value="0"/>
-                    <Property name="text" type="java.lang.String" value="Ajouter Employ&#xe9;"/>
+                    <Property name="text" type="java.lang.String" value="Ajouter un employ&#xe9;"/>
                     <Property name="alignmentX" type="float" value="0.5"/>
                   </Properties>
                   <Events>
@@ -889,7 +890,7 @@
     <Container class="javax.swing.JPanel" name="jpPrincipal">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="33" red="ff" type="rgb"/>
+          <Color blue="0" green="0" red="0" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
