--- a/MyLibrary/src/Home/Header.form
+++ b/MyLibrary/src/Home/Header.form
@@ -152,6 +152,9 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="2" name="C:\Users\Chrys\Documents\NetBeansProjects\Librairie\MyLibrary\src\Home\Library-logo.png"/>
+        </Property>
         <Property name="alignmentX" type="float" value="0.5"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[300, 100]"/>
