--- a/MyLibrary/src/Home/PannelCentralSelection2.form
+++ b/MyLibrary/src/Home/PannelCentralSelection2.form
@@ -510,6 +510,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseMoved" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jPanel16MouseMoved"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanel16MouseClicked"/>
               </Events>
 
               <Layout>
